testproj/src/objects/Approval_History__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Id__c</fullName>
        <label>Approval Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_level__c</fullName>
        <label>Approval level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentMail_Date_Time__c</fullName>
        <label>CurrentMail Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Actor_Email_Id__c</fullName>
        <label>Current Actor Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Actor_Id__c</fullName>
        <label>Current Actor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Esc_Counter__c</fullName>
        <label>Current Esc Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Rem_Counter__c</fullName>
        <label>Current Rem Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <label>Current Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Work_Item__c</fullName>
        <label>Current Work Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecs_User_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ecs User 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_History7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecs_User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ecs User 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_History8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ecs_User_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ecs User 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_History9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>EmailSubject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailTemplateBody__c</fullName>
        <label>EmailTemplateBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscCounter1__c</fullName>
        <label>EscCounter1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscCounter2__c</fullName>
        <label>EscCounter2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscCounter3__c</fullName>
        <label>EscCounter3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Esc_Email_1__c</fullName>
        <label>Esc Email 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esc_Email_2__c</fullName>
        <label>Esc Email 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Esc_Email_3__c</fullName>
        <label>Esc Email 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Days__c</fullName>
        <formula>Completion_Date__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemCounter1__c</fullName>
        <label>RemCounter1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemCounter2__c</fullName>
        <label>RemCounter2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemCounter3__c</fullName>
        <label>RemCounter3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReminderDate1__c</fullName>
        <label>ReminderDate1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sender_Email_Id__c</fullName>
        <label>Sender Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_1__c</fullName>
        <label>Status 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_2__c</fullName>
        <label>Status 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_3__c</fullName>
        <label>Status 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_1_Comments__c</fullName>
        <label>Step 1 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_1_Completion_Date__c</fullName>
        <label>Step 1 Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step_1_Entry_Date__c</fullName>
        <label>Step 1 Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step_1__c</fullName>
        <label>Step 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_2_Comments__c</fullName>
        <label>Step 2 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_2_Completion_Date__c</fullName>
        <label>Step 2 Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step_2_Entry_Date__c</fullName>
        <label>Step 2  Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step_2__c</fullName>
        <label>Step 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_3_Comments__c</fullName>
        <label>Step 3 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_3_Completion_Date__c</fullName>
        <label>Step 3 Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step_3_Entry_Date__c</fullName>
        <label>Step 3 Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step_3__c</fullName>
        <label>Step 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracker_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Id</label>
        <referenceTo>Tracker__c</referenceTo>
        <relationshipLabel>Approval Historys</relationshipLabel>
        <relationshipName>Approval_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unreached_Flag_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unreached Flag 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unreached_Flag_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unreached Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unreached_Flag_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unreached Flag 3</label>
        <type>Checkbox</type>
    </fields>
    <label>Approval History</label>
    <nameField>
        <displayFormat>AH-{0000000}</displayFormat>
        <label>Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>